<resources>
    <string name="app_name">My first App</string>
    <string name="button_main">Добавить покупку</string>
    <string name="hint1">Введите название</string>
    <string name="hint2">Введите цену</string>
    <string name="button_accept">Подтвердить</string>
    <string name="info">Заполните все поля</string>
    <string name="confirm">Confirm</string>
    <string name="empty">Value is empty!</string>
    <string name="all_time">Все время</string>
    <string name="week">Неделя</string>
    <string name="month">Месяц</string>
    <string name="day">Сегодня</string>
    <string name="year">Год</string>
    <string name="period">Выберите период</string>
    <string name="currency_code">Код:</string>
    <string name="currency_name">Название:</string>
    <string name="currency_buy">Покупка:</string>
    <string name="currency_sell">Цена валюты:</string>
    <string name="currency_cost">15.25</string>
    <string name="currency_quantity">Количество:</string>
    <string name="warning_dialog">Предупреждение</string>
    <string name="description_dialog">Вы действительно хотите удалить элемент?</string>
    <string name="no_dialog">NO</string>
    <string name="yes_dialog">YES</string>
    <string name="empty_chart">За данный период
        времени покупки отсутствуют</string>
    <string name="internet_problems">Нет подключения к сети</string>
    <string name="try_again">Повторить попытку</string>



    <string-array name="types">
        <item>Все</item>
        <item>Одежда</item>
        <item>Еда</item>
        <item>Отдых</item>
        <item>Дом</item>
        <item>Прочее</item>
    </string-array>

    <string-array name="types2">
        <item>Одежда</item>
        <item>Еда</item>
        <item>Отдых</item>
        <item>Дом</item>
        <item>Прочее</item>
    </string-array>

    <string-array name="periods">
        <item>За день</item>
        <item>За неделю</item>
        <item>За месяц</item>
        <item>За год</item>
        <item>За всё время</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>