<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <Button
        android:id="@+id/button_today"
        android:layout_width="0dp"
        android:layout_height="65dp"
        android:backgroundTint="@color/teal_700"
        android:drawableTop="@drawable/down_arrow_white"
        android:text="@string/day"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guidelineCenter"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button_week"
        android:layout_width="0dp"
        android:layout_height="65dp"
        android:backgroundTint="@color/teal_700"
        android:drawableTop="@drawable/down_arrow_white"
        android:text="@string/week"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/guidelineCenter"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/button_month"
        android:layout_width="0dp"
        android:layout_height="65dp"
        android:backgroundTint="@color/teal_700"
        android:drawableTop="@drawable/down_arrow_white"
        android:text="@string/month"
        android:textSize="10sp"

        app:layout_constraintEnd_toStartOf="@+id/guidelineCenter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_today" />

    <Button
        android:id="@+id/button_year"
        android:layout_width="0dp"
        android:layout_height="65dp"
        android:backgroundTint="@color/teal_700"
        android:drawableTop="@drawable/down_arrow_white"
        android:text="@string/year"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/guidelineCenter"
        app:layout_constraintTop_toBottomOf="@id/button_week" />


    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:background="@color/teal_700"
        android:gravity="center"
        android:text="@string/period"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineCenter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="333dp" />

</androidx.constraintlayout.widget.ConstraintLayout>